// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwitchStyled /> should render the component 1`] = `
<div
  className="SwitchStyled-rZBzA dCzpVq"
/>
`;

exports[`<SwitchStyled /> should render the component with \`active state\` 1`] = `
<div
  className="SwitchStyled-rZBzA gUxXwm"
/>
`;
